--- a/web.html
+++ b/web.html
@@ -33,102 +33,10 @@
         <h2>Catálogo</h2>
         <div class="productos2">
             <h3><p>Sección de diseños de Vincent Van Gogh</p></h3>
-            <div id="carouselExampleIndicators0" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <style>
-                    .carousel-item img {
-                      max-height: 600px; 
-                      width: auto; 
-                      margin: auto; 
-                    }
-                  </style>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-
-                </div>
-                <div class="carousel-inner mt-5">
-                  <div class="carousel-item active">
-                    <img src="Img/img.vangogh1.jpg" class="d-block w-10" src="imagen1.jpg" alt="Primera imagen">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Img/img.vangogh2.jpg" class="d-block w-10" src="imagen1.jpg" alt="Segunda imagen">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Img/img.vangogh3.jpg" class="d-block w-10" src="imagen1.jpg" alt="Tercera imagen">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Img/img.vangogh4.jpg" class="d-block w-10" src="imagen1.jpg" alt="Cuarta imagen">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
+            <div id
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section>
-            
-    <section>
-        <div class="productos3">
-            <h3><p>Sección de diseños de la naturaleza</p></h3>
-            <div id="carouselExampleIndicators1" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                  <style>
-                    .carousel-item img {
-                      max-height: 600px; 
-                      width: auto; 
-                      margin: auto; 
-                    }
-                  </style>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
-
-                </div>
-                <div class="carousel-inner mt-5">
-                  <div class="carousel-item active">
-                    <img src="Img/lavanda.bolsa.jpg" class="d-block w-10" src="imagen1.jpg" alt="Primera imagen">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Img/floreslibro.jpg" class="d-block w-10" src="imagen1.jpg" alt="Segunda imagen">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Img/caraflores.jpg" class="d-block w-10" src="imagen1.jpg" alt="Tercera imagen">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="Img/gorro.flores.jpg" class="d-block w-10" src="imagen1.jpg" alt="Cuarta imagen">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-        </section> 
-            
-    <section>
-        <div class="productos3">
-           <h3><p>Sección de diseños musicales</p></h3>
-           <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <style>
-                .carousel-item img {
-                  max-height: 600px; 
-                  width: auto; 
-                  margin: auto; 
-                }
-              </style>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+   urrent="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
